feat: :zap: made the final bundle

--- a/develop.html
+++ b/develop.html
@@ -10,15 +10,15 @@
 
     <!-----SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS----->
 
-    <script type="module" src="./ts/Header.ts"></script>
-    <script type="module" src="./ts/Utility.ts"></script>
-    <script type="module" src="./ts/index.ts"></script>
+    <script type="module" src="./js/Header.js"></script>
+    <script type="module" src="./js/Utility.js"></script>
+    <script type="module" src="./js/index.js"></script>
 
-    <link rel="stylesheet" href="css/output.css" />
-    <link rel="stylesheet" href="css/MasterStyle.css" />
-    <link rel="stylesheet" href="css/index.css" />
-    <link rel="stylesheet" href="css/footer.css" />
-    <link rel="icon" type="icon" href="assets/HedgehogIcon.png" /> <!--FAVICON-->
+    <link rel="stylesheet" href="./css/output.css" />
+    <link rel="stylesheet" href="./css/MasterStyle.css" />
+    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
+    <link rel="icon" type="icon" href="./assets/HedgehogIcon.png" /> <!--FAVICON-->
 </head>
 
 <body>
