--- a/games.html
+++ b/games.html
@@ -12,16 +12,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-----SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS----->
 
-    <script type="module" src="./ts/Utility.ts"></script>
-    <script type="module" src="./ts/Header.ts"></script>
+    <script type="module" src="./js/Utility.js"></script>
+    <script type="module" src="./js/Header.js"></script>
 
     <!--CSS-----------------------------CSS--CSS--CSSCSS--CSS--CSSCSS--CSS--CSSCSS--CSS--CSSCSS--CSS--CSSCSS--CSS--CSSCSS--CSS--CSSCSS--CSS--CSSCSS--CSS--CSS-->
-    <link rel="stylesheet" href="css/games.css" />
+    <link rel="stylesheet" href="./css/games.css" />
 
-    <link rel="stylesheet" href="css/output.css" />
-    <link rel="stylesheet" href="css/MasterStyle.css" />
-    <link rel="stylesheet" href="css/footer.css" />
-    <link rel="icon" type="icon" href="assets/HedgehogIcon.png" />
+    <link rel="stylesheet" href="./css/output.css" />
+    <link rel="stylesheet" href="./css/MasterStyle.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
+    <link rel="icon" type="icon" href="./assets/HedgehogIcon.png" />
     <!--FAVICON-->
 </head>
 
