--- a/index.html
+++ b/index.html
@@ -36,11 +36,7 @@ porkyproductions.github.io
     <meta name="description" content="The Offical Website of PorkyProductions">
     <meta name="apple-touch-icon" content="assets/HedgehogIcon.png" />
     <title>Home - Porky Productions</title>
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js"></script>
-    <script>
-      // Fallback to loading jQuery from a local path if the CDN is unavailable
-      (window.jQuery || document.write('<script src="./node_modules/jquery/dist/jquery.min.js"><\/script>'));
-    </script>
+    <script type="module" src="./node_modules/jquery/dist/jquery.js"></script>
     <!-----SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS----->
 
     <script type="module" src="./js/Utility.js"></script>
@@ -50,16 +46,16 @@ porkyproductions.github.io
 
 <!--CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS-----CSS------->
 <!--In-House-->
-    <link rel="stylesheet" href="css/MasterStyle.css" />
-    <link rel="stylesheet" href="css/index.css" />
-    <link rel="stylesheet" href="css/footer.css" />
-    <link rel="stylesheet" href="css/output.css" />
+    <link rel="stylesheet" href="./css/MasterStyle.css" />
+    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
+    <link rel="stylesheet" href="./css/output.css" />
 <!--GFonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,600;0,700;0,800;0,900;1,400;1,600&display=swap" rel="stylesheet"> 
 
-    <link rel="icon" type="icon" href="assets/HedgehogIcon.png" />
+    <link rel="icon" type="icon" href="./assets/HedgehogIcon.png" />
     <!--FAVICON-->
 </head>
 
