--- a/404.html
+++ b/404.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/MasterStyle.css" />
-    <link rel="stylesheet" href="css/output.css" />
+    <link rel="stylesheet" href="./css/MasterStyle.css" />
+    <link rel="stylesheet" href="./css/output.css" />
     <link rel="icon" type="icon" href="assets/HedgehogIcon.png"/>
-    <script type="module" src="./ts/404.ts"></script>
+    <script type="module" src="./js/404.js"></script>
     <!--FAVICON-->
     <title>404 Page Not Found</title>
 </head>
