--- a/models.html
+++ b/models.html
@@ -12,15 +12,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-----SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS----->
 
-    <script type="module" src="./ts/Utility.ts"></script>
-    <script type="module" src="./ts/Header.ts"></script>
-    <script type="module" src="./ts/models.ts"></script>
+    <script type="module" src="./js/Utility.js"></script>
+    <script type="module" src="./js/Header.js"></script>
+    <script type="module" src="./js/models.js"></script>
 
-    <link rel="stylesheet" href="css/output.css" />
-    <link rel="stylesheet" href="css/MasterStyle.css" />
-    <link rel="stylesheet" href="css/models.css" />
-    <link rel="stylesheet" href="css/footer.css" />
-    <link rel="icon" type="icon" href="assets/HedgehogIcon.png" />
+    <link rel="stylesheet" href="./css/output.css" />
+    <link rel="stylesheet" href="./css/MasterStyle.css" />
+    <link rel="stylesheet" href="./css/models.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
+    <link rel="icon" type="icon" href="./assets/HedgehogIcon.png" />
     <!--FAVICON-->
 </head>
 
