--- a/404.html
+++ b/404.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/output.css" />
     <link rel="icon" type="icon" href="assets/HedgehogIcon.png"/>
     <script type="module" src="./js/404.js"></script>
+    <link rel="stylesheet" href="./css/scss/spin.scss">
     <!--FAVICON-->
     <title>404 Page Not Found</title>
 </head>
