made sime changes 3to the developments page

--- a/games.html
+++ b/games.html
@@ -133,7 +133,7 @@
       </p>
       <br>
       <p>
-        Made with <img src="https://raw.githubusercontent.com/twitter/twemoji/master/assets/svg/2764.svg" alt="love" style="height: 100px; margin: auto;" onclick="addToCounter()"> at PorkyProductions
+        Made with <img src="./node_modules/bootstrap-icons/icons/heart-fill.svg" alt="love" style="height: 100px; margin: auto;" onclick="addToCounter()"> at PorkyProductions
       </p>
   </div>
     <div class="loader-wrapper loader-padding">
