--- a/rushGameDownload.html
+++ b/rushGameDownload.html
@@ -28,7 +28,7 @@
     <div id="header" class="header">
         <!--Hegdehog logo thing-->
         <a href="index.html" class="logo">
-            <img src="https://lh3.googleusercontent.com/k-u9rOXwTYfcI8FFUc_8yLpkOBHc0C-uG7MZC-xzG4_w4Z3exV0m0iMTbWJ2yGfxMUR2OjfAe-rdDn7xwhptNoh4mWP3KE10yBYD59oAFR8q-ZPcOn026JLPfq5foH7MoTUoawCiNA=w270-h214-p-k"
+            <img src="./assets/HedgehogIcon.png"
                  width="100"
                  height="70"
                  alt="Hedgehog Logo" />
@@ -78,7 +78,7 @@
         </p>
         <br>
         <p>
-          Made with <img src="https://raw.githubusercontent.com/twitter/twemoji/master/assets/svg/2764.svg" alt="love" style="height: 100px; margin: auto;" onclick="addToCounter()"> at PorkyProductions
+          Made with <img src="./node_modules/bootstrap-icons/icons/heart-fill.svg" alt="love" style="height: 100px; margin: auto;" onclick="addToCounter()"> at PorkyProductions
         </p>
     </div>
     <div class="loader-wrapper loader-padding">
