--- a/credits.html
+++ b/credits.html
@@ -77,7 +77,7 @@
     </p>
     <br>
     <p>
-      Made with <img src="https://raw.githubusercontent.com/twitter/twemoji/master/assets/svg/2764.svg" alt="love" style="height: 100px; margin: auto;" onclick="addToCounter()"> at PorkyProductions
+      Made with <img src="./node_modules/bootstrap-icons/icons/heart-fill.svg" alt="love" style="height: 100px; margin: auto;" onclick="addToCounter()"> at PorkyProductions
     </p>
 </div>
 <!--BELOW is the function that hides the loading screen. Refer to "index.js"-->
