--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ porkyproductions.github.io
       <br />
   <!--NOTE: Titles and Headers are the "Raleway" font, everything else is Arial or sans-serif -->
       <div class="dark:bg-black dark:text-white">
-        <div class="padding-semi-large text-9xl sm:text-5xl md:text-9xl lg:text-9xl text-center font-bold" id="mainLogoText" style="font-family: 'Raleway', sans-serif;" onclick="changeColorOfMainLogoText()">
+        <div class="padding-semi-large text-9xl sm:text-6xl md:text-9xl lg:text-9xl text-center font-bold" id="mainLogoText" style="font-family: 'Raleway', sans-serif;" onclick="changeColorOfMainLogoText()">
           <h1>PorkyProductions</h1>
         </div>
         </div>
@@ -125,9 +125,9 @@ porkyproductions.github.io
               <div class="mainBody-tile">
                   <h3 class="ralewayBold">Porky Productions Models</h3>
                   <p>
-                      Porky Productions also specialize in building real world models
-                      using our 3D printers. Our creations, and models can be viewed
-                      here!
+                        Porky Productions also specialize in building real world models
+                        using our 3D printers. Our creations, and models can be viewed
+                        here!
                   </p>
                   <a href="Models.html">Models Tab</a>
               </div>
@@ -235,7 +235,7 @@ porkyproductions.github.io
             </p>
             <br>
             <p>
-              Made with <img src="https://raw.githubusercontent.com/twitter/twemoji/master/assets/svg/2764.svg" alt="love" style="height: 100px; margin: auto;" onclick="addToCounter()"> at PorkyProductions
+              Made with <img src="./node_modules/bootstrap-icons/icons/heart-fill.svg" alt="love" style="height: 100px; margin: auto;" onclick="addToCounter()"> at PorkyProductions
             </p>
         </div>
       </div>
