--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@ porkyproductions.github.io
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,600;0,700;0,800;0,900;1,400;1,600&display=swap" rel="stylesheet"> 
 
     <link rel="icon" type="icon" href="./assets/HedgehogIcon.png" />
+    <link rel="apple-touch-icon" href="./assets/HedgehogIcon.png">
     <!--FAVICON-->
+
+    <link rel="manifest" href="manifest.json">
 </head>
 
   <body id="page" class="dark:bg-black dark:text-white">
