--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ porkyproductions.github.io
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="The Offical Website of PorkyProductions">
     <meta name="apple-touch-icon" content="assets/HedgehogIcon.png" />
-    <title>Home - Porky Productions</title>
+    <title>Porky Productions - Home</title>
     <script type="module" src="./node_modules/jquery/dist/jquery.js"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js"></script>
     <!-----SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS----->
@@ -59,8 +59,7 @@ porkyproductions.github.io
     <link rel="icon" type="icon" href="./assets/HedgehogIcon.png" />
     <link rel="apple-touch-icon" href="./assets/HedgehogIcon.png">
     <!--FAVICON-->
-
-    <link rel="manifest" href="manifest.json">
+    <link rel="alternate" href="sitemap.xml" type="application/rss+xml" title="RSS">
 </head>
 
   <body id="page" class="dark:bg-black dark:text-white">
